TEST_TRIGGER update

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -17,7 +17,7 @@ jobs:
     steps:
       - name: Run Automated UI tests
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.TEST_TRIGGER }}
           EVENT: repository_dispatch
           ORG: EYDS-CA
           REPO: SATAutomation
