--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -12,6 +12,9 @@ on:
   repository_dispatch:
   workflow_dispatch:
 jobs:
+  call_worflow-using-branch:
+    uses: EYDS-CA/SATAutomation/.github/workflows/maven.yml@main
+    
   build:
     runs-on: ubuntu-latest
     steps:
@@ -24,7 +27,7 @@ jobs:
         run: |
          curl -d "{\"event_type\": \"${EVENT}\"}" -H "Content-Type: application/json" -H "Authorization: token ${GITHUB_TOKEN}" -H "Accept: application/vnd.github.everest-preview+json" "https://api.github.com/repos/${ORG}/${REPO}/dispatches"
 
-    
+
       
 
     
