--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -11,10 +11,7 @@ name: Call other repo
 on: 
   repository_dispatch:
   workflow_dispatch:
-jobs:
-  call_worflow-using-branch:
-    uses: EYDS-CA/SATAutomation/.github/workflows/maven.yml@main
-    
+jobs:   
   build:
     runs-on: ubuntu-latest
     steps:
@@ -25,7 +22,7 @@ jobs:
           ORG: EYDS-CA
           REPO: SATAutomation
         run: |
-         curl -d "{\"event_type\": \"${EVENT}\"}" -H "Content-Type: application/json" -H "Authorization: token ${GITHUB_TOKEN}" -H "Accept: application/vnd.github.everest-preview+json" "https://api.github.com/repos/${ORG}/${REPO}/dispatches"
+         curl -d "{\"event_type\": \"${EVENT}\"}" -H "Content-Type: application/json" -H "Authorization: token ${GITHUB_TOKEN}" -H "Accept: application/vnd.github.everest-preview+json" "https://api.github.com/repos/${ORG}/${REPO}/.github/workflows/maven.yml@main"
 
 
       
