--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -22,7 +22,7 @@ jobs:
           ORG: EYDS-CA
           REPO: SATAutomation
         run: |
-         curl -d "{\"event_type\": \"${EVENT}\"}" -H "Content-Type: application/json" -H "Authorization: token ${GITHUB_TOKEN}" -H "Accept: application/vnd.github.everest-preview+json" "https://api.github.com/repos/${ORG}/${REPO}/actions/workflows/maven.yml/dispatches"
+         curl -H "Accept: application/vnd.github+json" -H "Authorization: token ${GITHUB_TOKEN}" --request POST --data '{"ref": "main"}' https://api.github.com/repos/${ORG}/${REPO}/actions/workflows/maven.yml/dispatches
 
 
       
